--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
+  flutter_bloc: ^6.1.1
+  bloc: ^6.1.0
+  dio: ^3.0.8
+  fluttertoast: ^7.1.5
+  shared_preferences: ^0.5.12+4
+  outline_material_icons: ^0.1.1
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +52,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/logo.png
+    - assets/images
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
