--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   fluttertoast: ^7.1.5
   shared_preferences: ^0.5.12+4
   outline_material_icons: ^0.1.1
+  flutter_rating_bar: ^3.2.0+1
+  expansion_card: ^0.1.0
+  expansion_tile_card: ^1.1.0
+  conditional_builder: ^1.0.2
+  connectivity: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +57,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
